--- a/quiz_generation-main/vercel.json
+++ b/quiz_generation-main/vercel.json
@@ -14,5 +14,8 @@
         "src": "/(.*)",
         "dest": "quiz_generation.py"
       }
-    ]
+    ],
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }
+]
+
   }
