--- a/quiz_generation-main/vercel.json
+++ b/quiz_generation-main/vercel.json
@@ -12,7 +12,7 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "quiz_generation.py"
+        "dest": "/"
       }
     ],
     "rewrites": [{ "source": "/(.*)", "destination": "/" }
