--- a/quiz_generation-main/requirements.txt
+++ b/quiz_generation-main/requirements.txt
@@ -1,6 +1,6 @@
-fastapi>=0.68.0
-uvicorn>=0.15.0
-python-docx>=0.8.11
-groq>=0.3.0
-mangum>=0.13.0
-python-multipart>=0.0.5
+fastapi==0.111.0
+mangum==0.17.0
+groq==0.6.0
+python-docx==1.1.0
+python-multipart==0.0.9
+uvicorn==0.29.0
