--- a/quiz_generation-main/vercel.json
+++ b/quiz_generation-main/vercel.json
@@ -1,18 +1,31 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "quiz_generation.py",
-        "use": "@vercel/python",
-        "config": { 
-          "runtime": "python3.9"
+        {
+            "src": "quiz_generation.py",
+            "use": "@vercel/python",
+            "config": {
+                "runtime": "python3.11",
+                "maxLambdaSize": "15mb",
+                "includeFiles": "**/*.py"
+            }
         }
-      }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
+        {
+            "src": "/generate",
+            "dest": "quiz_generation.handler",
+            "methods": ["POST"]
+        },
+        {
+            "src": "/download",
+            "dest": "quiz_generation.handler",
+            "methods": ["POST"]
+        },
+        {
+            "src": "/",
+            "dest": "quiz_generation.handler",
+            "methods": ["GET"]
+        }
     ]
-  }
+}
