--- a/quiz_generation-main/vercel.json
+++ b/quiz_generation-main/vercel.json
@@ -3,7 +3,11 @@
     "builds": [
     {
     "src": "api/quiz_generation.py",
-    "use": "@vercel/python"
+    "use": "@vercel/python",
+    "config": {
+                "runtime": "python3.9",
+                "maxLambdaSize": "15mb"
+            }
     }
     ],
     "routes": [
