--- a/quiz_generation-main/vercel.json
+++ b/quiz_generation-main/vercel.json
@@ -13,7 +13,7 @@
     "routes": [
     {
     "src": "/(.*)",
-    "dest": "api/quiz_generation.py",
+    "dest": "api/quiz_generation.handler",
     "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
     }
     ]
