--- a/quiz_generation-main/vercel.json
+++ b/quiz_generation-main/vercel.json
@@ -1,21 +1,3 @@
 {
-    "version": 2,
-    "builds": [
-    {
-    "src": "api/quiz_generation.py",
-    "use": "@vercel/python",
-    "config": {
-                "runtime": "python3.9",
-                "maxLambdaSize": "15mb"
-            }
-    }
-    ],
-    "routes": [
-    {
-    "src": "/(.*)",
-    "dest": "api/quiz_generation.py",
-    "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
-    }
-    ]
-}
-
+    "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
+  }
